--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
     color: #A74345;
 }
 body {
-    background-color: #E34B4D;
+    background-color: #EEF1DA;
 }
     </style>
 </head>
@@ -68,7 +68,7 @@ body {
                     <div class="header-wrapper-1">
                         <div class="logo-area-start">
                             <a href="index.html" class="logo">
-                                <img src="assets/images/logo/logo.svg" alt="logo_area">
+                                <img src="assets/images/logo/logo (2).svg" alt="logo_area">
                             </a>
                             <div class="nav-area">
                                 <ul class="">
@@ -1282,7 +1282,7 @@ body {
             <nav class="nav-main mainmenu-nav mt--30">
                 <ul class="mainmenu metismenu" id="mobile-menu-active">
                     <li class="has-droupdown">
-                        <a href="#" class="main">Home</a>
+                        <a href="#" class="main">HomeHome</a>
                         <ul class="submenu mm-collapse">
                             <li><a class="mobile-menu-link" href="index.html">Main Home</a></li>
                             <li><a class="mobile-menu-link" href="index-two.html">Home Two</a></li>
